@@ -1,5 +1,5 @@
 3e8ebae349953a3b7a665eecce562802 *COPYRIGHT
-e93495acc8e4b407ab79142144f0d5bc *DESCRIPTION
+db3fffdf02ce2570af4a02f8301b1741 *DESCRIPTION
 1ea2b4f4022f9f69e1b378f5cec63e83 *NAMESPACE
 35027487cefcc274c18290cae33814b1 *Notes
 99d61074ad5e9d8e5ef9ce01f2c7bc67 *R/Surv.S
@@ -22,7 +22,7 @@ f552c857a581bdeb8f3bc763d09f30c3 *R/cch.R
 71c63b0d2a9b248b53ca27959482163a *R/coxexact.fit.R
 94e49b45d947935252dac8935c85b14f *R/coxpenal.df.S
 45a21e19ff616a2ecd68ebb2c867d48a *R/coxpenal.fit.R
-303e3f5250efe3d90d64b0dfadb1aefe *R/coxph.R
+b6a41fbd70506bbdf352fb12cee3419d *R/coxph.R
 a848bd9479ee599ee235564866426856 *R/coxph.control.S
 64447afb35c0bc9a0cfcd03deaf6664a *R/coxph.detail.S
 e451340cde2826ac7eff528ae6463c86 *R/coxph.fit.S
@@ -127,24 +127,24 @@ e458ee36a24bd3de07fe2c43502ca199 *data/cancer.rda
 b1d9d7dd1abc066b3a32989627b00927 *data/cgd.rda
 81cbcf099abf5f0cbea248e0012b483c *data/colon.rda
 e6b0243c6add347247c4e1951e4d68d8 *data/heart.rda
-7b00a7f12c6480f96611e2ae4a563846 *data/kidney.rda
+fb133b6176ee7ae4102135b761023ffe *data/kidney.rda
 020b59a7c604dd2499832e1b56a7bc33 *data/leukemia.rda
 7b14acde4513dba5ddf30bf676500a1d *data/logan.rda
 ccec4c290e88d1d537995b013f6f7644 *data/lung.rda
 27010563bd2086dc413f12c2be7cbd29 *data/mgus.rda
 6473af5d92183e8533ad71464faea559 *data/nwtco.rda
-b919cb3233c35602e26ddd6435b3f59c *data/ovarian.rda
+523ebcec4a8d3c7fb8bdd078e79fb98a *data/ovarian.rda
 640a93d6e0bb2deb8668433bd39f4b05 *data/pbc.rda
-50a31c531c713441eef0c0243984d73c *data/rats.rda
+cef125147ea377b10249e180701da788 *data/rats.rda
 b75bf4f19a344d7defddeed1a48cbc1c *data/stanford2.rda
 b5bba9b378cfa76556e5e1b5780ee6ed *data/survexp.rda
 2d8b5f44959ad35a300010890de7ac12 *data/tobin.txt.gz
 d4b78dd46512d982683f6bb2a025aa9a *data/veteran.rda
 a0c7d645ec3ebed73d90fd59cbe48a39 *inst/CITATION
-b382832acfcce86431302b387abaf761 *inst/NEWS.Rd
+f72065678e2411896e6e66477f120ea4 *inst/NEWS.Rd
 059d7783f40e8880d4accd5a70b79ff7 *inst/doc/timedep.Rnw
-cfcec13a47c5b49b32bcc7550fdb6f6f *inst/doc/timedep.pdf
-53f7ffe6de9cd87ce0d70a7cc0ee9780 *inst/doc/validate.pdf
+dc55ed86d2942265bb95eb61c0aa5ce2 *inst/doc/timedep.pdf
+2ff8d5eebbd2b95e369124708e6bf852 *inst/doc/validate.pdf
 f1ff9ca382a55cafd825d6f5cbfa05b1 *man/Surv.Rd
 e1b4f2135554802fd7d56872fcbb0d42 *man/aareg.Rd
 a243059ab841bde163e28f3831038eca *man/aml.Rd
@@ -290,8 +290,8 @@ b0044fc1858bc87ad5c777a172aa7877 *tests/book3.Rout.save
 2ad5e46d47470f033b8a2c1e76980731 *tests/book6.Rout.save
 76e54eae81a1f4c270111f36e5cc4afd *tests/book7.R
 39d9e31ffdbed8b61ec3424142f28114 *tests/book7.Rout.save
-48efaf9929964548d4d08e4adeea57e3 *tests/cancer.R
-8e139e3896505affa55b04ca7c0e0bc8 *tests/cancer.Rout.save
+34ecdf393bd3d5934796c59f1aba27b5 *tests/cancer.R
+b374adfeeed40849303fca86d4394b03 *tests/cancer.Rout.save
 9700f9df5c3fafb13be25a1a551bf3b3 *tests/clogit.R
 32bef9152f59c8d27772ecd46efae75f *tests/clogit.Rout.save
 0d2d614825b6e0e9ed7772c057510510 *tests/concordance.R
